--- a/src/WebContent/css/common.css
+++ b/src/WebContent/css/common.css
@@ -1,6 +1,56 @@
 @charset "UTF-8";
 /*全てのページに適用*/
 
+
+*{
+    margin:0;
+    padding:0;
+}
+li{
+    list-style: none;
+}
+.gnav_wrap{
+	z-index:100;
+    max-width:1000px;
+    margin:0 auto;
+    display: flex;
+    justify-content: center;
+}
+.main_menu {
+    background: white;
+    width: 33.333%;
+    text-align: center;
+    color: black;
+    padding: 10px 0;
+    vertical-align: middle;
+    margin: auto 0;
+    cursor: pointer;
+    position: relative;
+}
+.sub_menu{
+    position: absolute;
+    background: #aaa;
+    width: 100%;
+    display:none;
+	transition: .5s;
+}
+.sub_menu>li{
+    padding:20px 0;
+}
+.sub_menu>li:hover{
+    background:red;
+}
+.open{
+    display:block;
+}
+.main{
+	position:absolute;
+	background:red;
+	z-index:-5;
+}
+
+
+/* 失敗した上部メニュー
 .top{
 	display: flex;
 }
@@ -23,10 +73,10 @@
 	cursor: pointer;
 }
 
-
 .sub-list{
     position: absolute;
     background: #aaa;
+    width: 100%;
     display:none;
   	transition: .5s;
     z-index: -3;
@@ -44,15 +94,15 @@
 .open{
     display:block;
 }
-
+*/
 
 
 /*上部メニューの文字について*/
-.list-item a{
+.gnav_wrap a{
 	text-decoration: none;
 	color:#404040;
 }
-.list-item a:hover{
+.gnav_wrap a:hover{
 	text-decoration: none;
 	color:#A6A6A6;
 }
@@ -60,7 +110,7 @@
 
 
 /*上部メニューの"/"のこと*/
-.list:not(.sub-list) li+li{
+.list:not(.sub_menu) li+li{
     border-left: 1px solid #999;
 }
 
