--- a/src/WebContent/css/common.css
+++ b/src/WebContent/css/common.css
@@ -24,22 +24,19 @@ li{
     padding: 10px 0;
     vertical-align: middle;
     margin: auto 0;
-    cursor: pointer;
     position: relative;
 }
 .sub_menu{
     position: absolute;
-    background: #aaa;
+    background: #5b5b5b;
     width: 100%;
     display:none;
-	transition: .5s;
+    padding:5px 0;
 }
 .sub_menu>li{
     padding:20px 0;
 }
-.sub_menu>li:hover{
-    background:red;
-}
+
 .open{
     display:block;
 }
@@ -50,64 +47,22 @@ li{
 }
 
 
-/* 失敗した上部メニュー
-.top{
-	display: flex;
-}
-
-.list {
-	display:flex;
-  	padding: 10px 0;
-  	margin: 0 auto;
-  	text-align: center;
-  	align-items: center;
-}
-
-
-.list-item {
-	font-size: 20px;
-    width: 200px;
-}
-
-.list-item span{
-	cursor: pointer;
-}
-
-.sub-list{
-    position: absolute;
-    background: #aaa;
-    width: 100%;
-    display:none;
-  	transition: .5s;
-    z-index: -3;
-}
-
-
-.sub-list>li{
-    padding:20px 0;
-}
-
-.sub-list>li:hover{
-    background:red;
-}
-
-.open{
-    display:block;
-}
-*/
-
-
 /*上部メニューの文字について*/
-.gnav_wrap a{
+.main_menu a{
 	text-decoration: none;
 	color:#404040;
 }
-.gnav_wrap a:hover{
+.main_menu a:hover{
 	text-decoration: none;
-	color:#A6A6A6;
+	color:#c7c7c7;
+}
+.sub_menu a{
+	color:#cfcfcf;
 }
 
-
+.sub_menu a:hover{
+	color:#e3e3e3;
+}
 
 /*上部メニューの"/"のこと*/
 .list:not(.sub_menu) li+li{
