--- a/src/WebContent/css/user_regist.css
+++ b/src/WebContent/css/user_regist.css
@@ -8,3 +8,33 @@
 	display:block !important;
 	
 }
+
+.regist{
+	display: block;
+    margin: 0 auto;
+    width: 80px;
+    height: 40px;
+    font-size: 18px;
+}
+
+.item{
+	display:flex;
+}
+
+.attention{
+	margin: 0 auto;
+	color:red;
+}
+
+table{
+	width: 100%;
+}
+
+.title-box{
+	text-align: center;
+	margin: 10px 0;
+}
+.conteinar{
+	max-width: 1100px;
+	margin:0 auto;
+}
