--- a/src/WebContent/css/login.css
+++ b/src/WebContent/css/login.css
@@ -4,12 +4,27 @@
 
 /* フォーム部分を角が丸い四角で囲う*/
 .form {
-	 padding: 0.5em 1em;
-    margin: 2em 0;
-    font-weight: bold;
-    color: #000000;/*文字色*/
-    background: #FFF;
-    border: solid 3px #000000;/*線*/
-    border-radius: 10px;/*角の丸み*/
+	padding: 0.5em 1em;
+	margin: 2em 0;
+	font-weight: bold;
+	color: #000000; /*文字色*/
+	background: #FFF;
+	border: solid 3px #000000; /*線*/
+	border-radius: 10px; /*角の丸み*/
+}
+/* 画像とフォームを横並びにしたい*/
+.flex {
+	display: flex;
+}
 
+.flex.logo {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	position: relative;
+}
+
+.flex.title {
+	margin: 0 0 0 20px;
+	padding: 0;
 }
