--- a/src/WebContent/css/calendar_edit.css
+++ b/src/WebContent/css/calendar_edit.css
@@ -6,5 +6,13 @@
 .newOpen{
 	/*display.noneにかき消されるため"!important"追加で重要度を上げてる*/
 	display:block !important;
-
 }
+
+
+#editform {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 500px;
+  margin-top: 10%;
+}
+
