--- a/src/WebContent/css/gourmet.css
+++ b/src/WebContent/css/gourmet.css
@@ -1,3 +1,21 @@
 @charset "UTF-8";
 
 /*gourmet.jspに適用*/
+
+.title2{
+	text-align : center;
+}
+.table {
+	 border-radius: 30px;
+		display : inline-block;
+}
+
+.tr {
+ border-radius: 10px 20px 30px 40px #404040;
+}
+
+td {
+	padding: 10px 25px;
+	border-bottom: 1px solid #555;
+}
+
