--- a/src/WebContent/css/gourmet_regist.css
+++ b/src/WebContent/css/gourmet_regist.css
@@ -1,1 +1,42 @@
 @charset "UTF-8";
+
+.regist{
+	display: inline-block;
+    margin: 15px 0 15px 300px;
+    width: 80px;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 10px;
+}
+
+table{
+	margin-left: 95px;
+	margin-top: 20px;
+    width: 550px;
+    line-height: 45px;
+    font-size: 16px;
+}
+
+input[type="text"]{
+	width: 200px;
+	height: 30px;
+}
+
+.title-box{
+	text-align: center;
+	margin: 10px 0;
+}
+.conteinar{
+	max-width: 1100px;
+	margin:0 auto;
+}
+
+form {
+	padding: 0.5em 1em;
+	margin: 2em 12em;
+	font-weight: bold;
+	background: #FFF;
+    border: solid 3px #9d9d9f;/*線*/
+    border-radius: 10px;/*角の丸み*/
+}
+
