--- a/src/WebContent/css/calendar_edit.css
+++ b/src/WebContent/css/calendar_edit.css
@@ -22,7 +22,7 @@
   margin-top: 2%;
 }
 
-
+/* 囲い枠線 */
 #waku {
     padding: 30px 5px 40px 5px;
     margin: 0 auto;
@@ -34,8 +34,6 @@
     border-radius: 10px;/*角の丸み*/
     line-height:35px;/*行*/
 }
-
-
 
 /* ラジオボタン */
 input[type=radio]+label:before{
@@ -61,13 +59,6 @@ input[type=radio]:checked+label::before{
 }
 
 
-/* +-ボタン */
-#add{
-	border-radius: 10px;
-	width: 20px;
-	border: solid 1px
-}
-
 /* ボタン */
 input[type=submit] {
     border-radius: 5px;
@@ -91,3 +82,9 @@ input[type=submit] {
 }
 
 /* プルダウン */
+select{
+  padding:10px;
+  width:100%;
+}
+
+
