--- a/src/WebContent/css/gourmet_edit.css
+++ b/src/WebContent/css/gourmet_edit.css
@@ -1,1 +1,61 @@
 @charset "UTF-8";
+
+@charset "UTF-8";
+
+.regist{
+	display: inline-block;
+    margin: 15px 0 15px 300px;
+    width: 80px;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 10px;
+}
+
+table{
+	margin: 0 auto;
+	margin-top: 20px;
+    width: 550px;
+    line-height: 45px;
+    font-size: 16px;
+}
+
+input[type="text"]{
+	width: 200px;
+	height: 30px;
+}
+
+.title-box{
+	text-align: center;
+	margin: 10px 0;
+}
+.conteinar{
+	max-width: 1100px;
+	margin:0 auto;
+}
+
+form {
+	font-weight: bold;
+}
+
+.star{
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+.textarean {
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+    padding: 8px 10px;
+    border: 1px solid #969da3;
+    border-radius: 2px;
+    line-height: 15px;
+}
+
+#waku{
+	width:700px;
+	margin: 10px auto;
+}
