--- a/src/WebContent/css/gourmet_regist.css
+++ b/src/WebContent/css/gourmet_regist.css
@@ -10,7 +10,7 @@
 }
 
 table{
-	margin-left: 95px;
+	margin: 0 auto;
 	margin-top: 20px;
     width: 550px;
     line-height: 45px;
@@ -32,11 +32,28 @@ input[type="text"]{
 }
 
 form {
-	padding: 0.5em 1em;
-	margin: 2em 12em;
 	font-weight: bold;
-	background: #FFF;
-    border: solid 3px #9d9d9f;/*線*/
-    border-radius: 10px;/*角の丸み*/
 }
 
+.star{
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+.textarean {
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+    padding: 8px 10px;
+    border: 1px solid #969da3;
+    border-radius: 2px;
+    line-height: 15px;
+}
+
+#waku{
+	width:700px;
+	margin: 10px auto;
+}
