--- a/src/WebContent/css/gourmet.css
+++ b/src/WebContent/css/gourmet.css
@@ -11,7 +11,7 @@
 }
 
 .tr {
- border-radius: 10px 20px 30px 40px #404040;
+ 	border-radius: 10px 20px 30px 40px #404040;
 }
 
 td {
@@ -19,3 +19,18 @@ td {
 	border-bottom: 1px solid #555;
 }
 
+
+/* 囲い枠線 */
+#waku {
+    padding: 30px 2px 10px 40px;
+    margin: 20px auto;
+    margin-top: 3%;
+    max-width: 850px;
+    font-weight: bold;
+    background: #FFF;
+    border: solid 3px #9d9d9f;/*線*/
+    border-radius: 10px;/*角の丸み*/
+	height: 300px;
+	overflow: scroll;
+	color:#3a3535;
+}
