--- a/src/WebContent/css/gourmet.css
+++ b/src/WebContent/css/gourmet.css
@@ -2,12 +2,10 @@
 
 /*gourmet.jspに適用*/
 
-.title2{
-	text-align : center;
-}
-.table {
+table {
 	 border-radius: 30px;
-		display : inline-block;
+	border-collapse: collapse;
+	margin: 0 auto;
 }
 
 .tr {
@@ -15,22 +13,37 @@
 }
 
 td {
-	padding: 10px 25px;
-	border-bottom: 1px solid #555;
+	font-weight: 100;
+    padding: 5px 25px 0px 25px;
+    border-bottom: 1px solid #555;
+    text-align: center;
 }
 
 
 /* 囲い枠線 */
 #waku {
-    padding: 30px 2px 10px 40px;
+	padding: 10px;
     margin: 20px auto;
     margin-top: 3%;
     max-width: 850px;
     font-weight: bold;
     background: #FFF;
-    border: solid 3px #9d9d9f;/*線*/
-    border-radius: 10px;/*角の丸み*/
-	height: 300px;
-	overflow: scroll;
-	color:#3a3535;
+    border: solid 3px #9d9d9f;
+    border-radius: 10px;
+    height: 350px;
+    overflow: scroll;
+    color: #3a3535;
+}
+
+.title-box{
+	margin-bottom:25px;
+	text-align: center;
+}
+
+.star{
+    background: transparent;
+    border: none;
+    vertical-align: middle;
+    font-size: 16px;
+
 }
