--- a/src/WebContent/css/gourmet_edit.css
+++ b/src/WebContent/css/gourmet_edit.css
@@ -2,13 +2,16 @@
 
 @charset "UTF-8";
 
-.regist{
-	display: inline-block;
-    margin: 15px 0 15px 300px;
+.button{
+	text-align: center;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.normal{
     width: 80px;
     height: 40px;
-    font-size: 18px;
-    border-radius: 10px;
+	font-size: 18px;
+	margin: 15px 0;
 }
 
 table{
@@ -28,11 +31,6 @@ input[type="text"]{
 	text-align: center;
 	margin: 10px 0;
 }
-.conteinar{
-	max-width: 1100px;
-	margin:0 auto;
-}
-
 form {
 	font-weight: bold;
 }
