--- a/src/WebContent/css/calendar_regist.css
+++ b/src/WebContent/css/calendar_regist.css
@@ -18,7 +18,7 @@
 #editform {
   width: 80%;
   margin: 0 auto;
-  max-width: 300px;
+  max-width: 400px;
   margin-top: 2%;
 }
 
@@ -32,7 +32,7 @@
     background: #FFF;
     border: solid 3px #9d9d9f;/*線*/
     border-radius: 10px;/*角の丸み*/
-    line-height:35px;/*行*/
+    line-height:25px;/*行*/
 }
 
 
@@ -77,6 +77,7 @@ input[type=submit] {
     box-sizing: border-box;
     text-decoration: none;
     text-align: center;
+    margin: 0 auto;
 }
 
 /* テキストエリア */
@@ -136,4 +137,5 @@ input[type=submit] {
 #branch select:focus {
     outline: 2px solid #bababa;
 }
+
 
