上部メニューCSS

--- a/src/WebContent/css/calendar.css
+++ b/src/WebContent/css/calendar.css
@@ -17,3 +17,13 @@
   opacity: 0.6;
   transition-duration: 0.3s;
 }
+
+
+.haikei {
+	background-color: #e3e3e3;
+}
+.main_menu {
+	background-color: #e3e3e3;
+}
+
+
